<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fhwedel_logo"
    >
<ScrollView
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>    
<LinearLayout  
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
	<TextView 
		android:id="@+id/tv_intent_header" 
	    android:layout_width="wrap_content"
	    android:text="@string/txt_intent_headline" 
	    android:layout_gravity="center"
	    android:background="#00000000"
	    style="@android:style/TextAppearance.Large"
	    android:layout_marginTop="20dp" android:layout_height="wrap_content" android:layout_marginBottom="20dp"/>
	<EditText 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:id="@+id/ed_intent_content" 
		android:text="@string/ed_intent_defaultContent"
		android:onClick="onEditTextClick">
	</EditText>
	<TextView  
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content"
	    android:text="@string/txt_intent_target" 
	    android:gravity="left"
	    android:layout_marginTop="10dp"
	    style="@android:style/TextAppearance.Medium"/>
	<RadioGroup
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp">
		<RadioButton 
			android:text="@string/rb_intent_web" 
			android:id="@+id/rb_intent_web" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:onClick="onRadioButtonClick">
		</RadioButton>
		<RadioButton 
			android:text="@string/rb_intent_sms" 
			android:id="@+id/rb_intent_sms" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:onClick="onRadioButtonClick">
		</RadioButton>
		<RadioButton 
			android:text="@string/rb_intent_call" 
			android:id="@+id/rb_intent_call" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:onClick="onRadioButtonClick">
		</RadioButton>
		<RadioButton 
			android:text="@string/rb_intent_geo" 
			android:id="@+id/rb_intent_geo" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:onClick="onRadioButtonClick">
		</RadioButton>
	</RadioGroup>
	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/btn_intent_submit"
		android:text="@string/btn_intent_submit"
		android:onClick="onButtonClick"/>	  
	<TextView 
		android:layout_width="wrap_content" 
		android:textAppearance="?android:attr/textAppearanceSmall" 
		android:id="@+id/tv_intents_activity" 
		android:layout_height="match_parent" 
		android:gravity="bottom" 
		android:layout_gravity="bottom"
		android:layout_marginTop="20dp"></TextView>  
	</LinearLayout>
	</ScrollView>
	</LinearLayout>

