<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/fhwedel_logo"
	>
	<TextView 
		android:id="@+id/tv_main_hello" 
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content"
	    android:text="@string/txt_main_hello" 
	    android:layout_gravity="center"
	    style="@android:style/TextAppearance.Large"
	    android:layout_marginTop="20dp"/>
	<TextView 
		android:id="@+id/tv_main_level" 
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content"
	    android:layout_gravity="center"
	    style="@android:style/TextAppearance.Small"
	    android:layout_marginTop="2dp"/>
	<Button
		style="@style/Buttons_Mainpage"
		android:id="@+id/btn_main_hello"
		android:text="@string/btn_main_hello" 
		android:layout_height="wrap_content" 
		android:layout_width="match_parent"
		android:layout_marginTop="30dp"
		android:onClick="onButtonClick"/>
	<Button
		style="@style/Buttons_Mainpage"
		android:id="@+id/btn_main_intents"
		android:text="@string/btn_main_intents" 
		android:layout_height="wrap_content" 
		android:layout_width="match_parent"
		android:visibility="gone"
		android:onClick="onButtonClick"/>
	<Button
		style="@style/Buttons_Mainpage"
		android:id="@+id/btn_main_services"
		android:text="@string/btn_main_services" 
		android:layout_height="wrap_content" 
		android:layout_width="match_parent"
		android:visibility="gone"
		android:onClick="onButtonClick"/>
	<Button
		style="@style/Buttons_Mainpage"
		android:id="@+id/btn_main_provider"
		android:text="@string/btn_main_contentprov" 
		android:layout_height="wrap_content" 
		android:layout_width="match_parent"
		android:visibility="gone"
		android:onClick="onButtonClick"/>
	<Button
		style="@style/Buttons_Mainpage"
		android:id="@+id/btn_main_extras"
		android:text="@string/btn_main_extras" 
		android:layout_height="wrap_content" 
		android:layout_width="match_parent"
		android:visibility="gone"
		android:onClick="onButtonClick"/>
	<TextView  
		android:layout_width="wrap_content" 
		android:textAppearance="?android:attr/textAppearanceSmall" 
		android:id="@+id/tv_main_activity" 
		android:layout_height="match_parent" 
		android:layout_gravity="bottom" 
		android:gravity="bottom"></TextView>
		
	</LinearLayout>
