<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@drawable/fhwedel_logo"
	    >	    
	<TextView 
		android:id="@+id/tv_gps_header" 
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content"
	    android:text="@string/txt_gps_headline" 
	    android:layout_gravity="center"
	    style="@android:style/TextAppearance.Large"
	    android:layout_marginTop="20dp"/>
	<TextView 
		android:id="@+id/tv_gps_latitude" 
	    android:text="@string/txt_gps_latitude" 
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content"
	    android:layout_gravity="center"
	    android:paddingLeft="20dp"
	    android:paddingRight="20dp"
	    style="@android:style/TextAppearance.Medium"
	    android:layout_marginTop="10dp"/>
	<TextView 
		android:id="@+id/tv_gps_longitude" 
	    android:text="@string/txt_gps_longitude" 
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content"
	    android:layout_gravity="center"
	    android:paddingLeft="20dp"
	    android:paddingRight="20dp"
	    style="@android:style/TextAppearance.Medium"/>
	<TextView 
		android:id="@+id/tv_gps_distance" 
	    android:text="@string/txt_gps_distance" 
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content"
	    android:layout_gravity="center"
	    android:paddingLeft="20dp"
	    android:paddingRight="20dp"
	    android:layout_marginTop="5dp"
	    style="@android:style/TextAppearance.Small"/>
	<Button
		style="@style/Buttons_Mainpage"
		android:id="@+id/btn_gps_start"
		android:text="@string/btn_gps_start" 
		android:layout_height="wrap_content" 
		android:layout_width="match_parent"
		android:layout_marginTop="30dp"
		android:onClick="onStartClick"/>
	<Button
		style="@style/Buttons_Mainpage"
		android:id="@+id/btn_gps_stop"
		android:text="@string/btn_gps_stop" 
		android:layout_height="wrap_content" 
		android:layout_width="match_parent"
		android:onClick="onStopClick"
		android:enabled="false"/>	
	<TextView 
		android:layout_width="wrap_content" 
		android:textAppearance="?android:attr/textAppearanceSmall" 
		android:id="@+id/tv_gps_activity" 
		android:layout_height="match_parent" 
		android:gravity="bottom" 
		android:layout_gravity="bottom"></TextView>    
	</LinearLayout>

