<?xml version="1.0" encoding="utf-8"?>
	
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fhwedel_logo"
    >
<ScrollView
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>    
<LinearLayout  
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
	<TextView 
		android:id="@+id/txt_services_header" 
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content"
	    android:text="@string/txt_services_header" 
	    android:layout_gravity="center"
	    style="@android:style/TextAppearance.Large"
	    android:layout_marginTop="20dp"/>
	<TextView 
		android:id="@+id/txt_services_bcheader" 
		android:text="@string/txt_services_bcheader"
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content"
	    android:layout_gravity="left"
	    android:drawableLeft="@android:drawable/ic_dialog_info"
	    android:drawablePadding="3dp"
	    android:gravity="center_vertical"
	    style="@android:style/TextAppearance.Medium"
	    android:layout_marginTop="20dp" />
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    >
		<Button
			style="@style/Buttons_Mainpage"
			android:id="@+id/btn_services_bcstart"
			android:text="@string/btn_services_bcstart"
			android:layout_weight="1" 
			android:layout_height="wrap_content" 
			android:layout_width="match_parent"
			android:onClick="onButtonClick"/>
		<Button
			style="@style/Buttons_Mainpage"
			android:id="@+id/btn_services_bcstop"
			android:text="@string/btn_services_bcstop" 
			android:layout_weight="1" 
			android:layout_height="wrap_content" 
			android:layout_width="match_parent"
			android:onClick="onButtonClick"/>
	</LinearLayout>
	<TextView 
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content"
	    android:layout_gravity="left"
	    style="@android:style/TextAppearance.Small"/>
	<TextView 
		android:id="@+id/txt_services_service1header" 
		android:text="@string/txt_services_service1header"
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content"
	    android:layout_gravity="left"
	    android:drawableLeft="@android:drawable/ic_dialog_info"
	    android:drawablePadding="3dp"
	    android:gravity="center_vertical"
	    style="@android:style/TextAppearance.Medium"
	    android:layout_marginTop="20dp"/>
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    >
		<Button
			style="@style/Buttons_Mainpage"
			android:id="@+id/btn_services_service1start"
			android:text="@string/btn_services_service1start"
			android:layout_weight="1" 
			android:layout_height="wrap_content" 
			android:layout_width="match_parent"
			android:onClick="onButtonClick"/>
		<Button
			style="@style/Buttons_Mainpage"
			android:id="@+id/btn_services_service1stop"
			android:text="@string/btn_services_service1stop" 
			android:layout_weight="1" 
			android:layout_height="wrap_content" 
			android:layout_width="match_parent"
			android:onClick="onButtonClick"/>
	</LinearLayout>
	<TextView 
		android:id="@+id/txt_services_service1msg" 
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content"
	    android:layout_gravity="left"
	    style="@android:style/TextAppearance.Small"/>
	<TextView 
		android:id="@+id/txt_services_service2header" 
		android:text="@string/txt_services_service2header"
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content"
	    android:layout_gravity="left"
	    android:drawableLeft="@android:drawable/ic_dialog_info"
	    android:drawablePadding="3dp"
	    android:gravity="center_vertical"
	    style="@android:style/TextAppearance.Medium"
	    android:layout_marginTop="20dp"/>
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    >
		<Button
			style="@style/Buttons_Mainpage"
			android:id="@+id/btn_services_service2start"
			android:text="@string/btn_services_service2start"
			android:layout_weight="1" 
			android:layout_height="wrap_content" 
			android:layout_width="match_parent"
			android:onClick="onButtonClick"/>
		<Button
			style="@style/Buttons_Mainpage"
			android:id="@+id/btn_services_service2stop"
			android:text="@string/btn_services_service2stop" 
			android:layout_weight="1" 
			android:layout_height="wrap_content" 
			android:layout_width="match_parent"
			android:onClick="onButtonClick"/>
	</LinearLayout>
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    >
		<Button
			style="@style/Buttons_Mainpage"
			android:id="@+id/btn_services_service2connect"
			android:text="@string/btn_services_service2connect"
			android:layout_weight="1" 
			android:layout_height="wrap_content" 
			android:layout_width="match_parent"
			android:onClick="onButtonClick"/>
		<Button
			style="@style/Buttons_Mainpage"
			android:id="@+id/btn_services_service2disconnect"
			android:text="@string/btn_services_service2disconnect" 
			android:layout_weight="1" 
			android:layout_height="wrap_content" 
			android:layout_width="match_parent"
			android:onClick="onButtonClick"/>
	</LinearLayout>
	<TextView 
		android:id="@+id/txt_services_service2msg" 
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content"
	    android:layout_gravity="left"
	    style="@android:style/TextAppearance.Small"/>
	<TextView 
		android:id="@+id/txt_services_service2artist" 
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content"
	    android:layout_gravity="left"
	    android:visibility="gone"
	    style="@android:style/TextAppearance.Small"/>
	<TextView 
		android:id="@+id/txt_services_service2album" 
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content"
	    android:visibility="gone"
	    android:layout_gravity="left"
	    style="@android:style/TextAppearance.Small"/>
<TextView 
		android:id="@+id/txt_services_tcpheader" 
		android:text="@string/txt_services_tcpheader"
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content"
	    android:layout_gravity="left"
	    android:drawableLeft="@android:drawable/ic_dialog_info"
	    android:drawablePadding="3dp"
	    android:gravity="center_vertical"
	    style="@android:style/TextAppearance.Medium"
	    android:layout_marginTop="20dp"/>
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    >
		<Button
			style="@style/Buttons_Mainpage"
			android:id="@+id/btn_services_tcpstart"
			android:text="@string/btn_services_tcpstart"
			android:layout_weight="1" 
			android:layout_height="wrap_content" 
			android:layout_width="match_parent"
			android:onClick="onButtonClick"/>
		<Button
			style="@style/Buttons_Mainpage"
			android:id="@+id/btn_services_tcpstop"
			android:text="@string/btn_services_tcpstop" 
			android:layout_weight="1" 
			android:layout_height="wrap_content" 
			android:layout_width="match_parent"
			android:onClick="onButtonClick"/>
	</LinearLayout>	    
	<TextView 
		android:id="@+id/txt_services_serverstatus"
		android:layout_marginTop="10dp" 
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content"
	    android:layout_gravity="left"
	    style="@android:style/TextAppearance.Small"/>
	<TextView 
		android:layout_marginTop="20dp"
		android:layout_width="wrap_content" 
		android:textAppearance="?android:attr/textAppearanceSmall" 
		android:id="@+id/tv_services_activity" 
		android:layout_height="match_parent" 
		android:gravity="bottom" 
		android:layout_gravity="bottom"></TextView>  	    
</LinearLayout>
</ScrollView>
</LinearLayout>