<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/fhwedel_logo"
	>
	<TextView 
		android:id="@+id/tv_extras_header" 
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content"
	    android:text="@string/txt_extras_header" 
	    android:layout_gravity="center"
	    style="@android:style/TextAppearance.Large"
	    android:layout_marginTop="20dp"/>
	<Button 
		android:onClick="onButtonClick" 
		android:layout_width="match_parent" 
		android:text="@string/btn_extras_graphics" 
		android:layout_marginTop="30dp" 
		android:layout_height="wrap_content" 
		style="@style/Buttons_Mainpage" 
		android:id="@+id/btn_extras_graphics"></Button>
	<Button 
		android:onClick="onButtonClick" 
		android:layout_width="match_parent" 
		android:text="@string/btn_extras_sensor" 
		android:layout_height="wrap_content" 
		style="@style/Buttons_Mainpage" 
		android:id="@+id/btn_extras_sensor"></Button>
	<Button 
		android:onClick="onButtonClick" 
		android:layout_width="match_parent" 
		android:text="@string/btn_extras_gps" 
		android:layout_height="wrap_content" 
		style="@style/Buttons_Mainpage" 
		android:id="@+id/btn_extras_gps"></Button>
	<TextView 
		android:layout_width="wrap_content" 
		android:textAppearance="?android:attr/textAppearanceSmall" 
		android:id="@+id/tv_extras_activity" 
		android:layout_height="match_parent" 
		android:gravity="bottom" 
		android:layout_gravity="bottom"></TextView>
	</LinearLayout>
