<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fhwedel_logo"
    >
	<TextView 
		android:id="@+id/txt_provider_header" 
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content"
	    android:text="@string/txt_provider_header" 
	    android:layout_gravity="center"
	    style="@android:style/TextAppearance.Large"
	    android:layout_marginTop="20dp"
	    android:layout_marginBottom="20dp"/>
	<RadioGroup
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp">
		<RadioButton 
			android:text="@string/rb_provider_music" 
			android:id="@+id/rb_provider_music" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:onClick="onRadioButtonClick">
		</RadioButton>
		<RadioButton 
			android:text="@string/rb_provider_users" 
			android:id="@+id/rb_provider_users" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:onClick="onRadioButtonClick">
		</RadioButton>
	</RadioGroup>
	<ListView
		android:id="@+id/android:list"
		android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_weight="1"/>
	<TextView 
		android:layout_weight="2"
		android:layout_width="wrap_content" 
		android:textAppearance="?android:attr/textAppearanceSmall" 
		android:id="@+id/tv_provider_activity" 
		android:layout_height="match_parent" 
		android:gravity="bottom" 
		android:layout_gravity="bottom"></TextView>      	
</LinearLayout>